crates/full-node/sov-ledger-apis/tests/integration/snapshots/integration__rest__get_tx.snap
---
source: full-node/sov-ledger-apis/tests/integration/rest.rs
expression: "&tx"
---
{
  "data": {
    "body": "dHgxIGJvZHk=",
    "eventRange": {
      "end": 0,
      "start": 0
    },
    "hash": "0x709b55bd3da0f5a838125bd0ee20c5bfdd7caba173912d4281cae816b79a201b",
    "number": 0,
    "receipt": {
      "data": 0.0,
      "result": "successful"
    },
    "type": "tx"
  },
  "meta": {}
}
